# git-branch-manager

./: .envrc  .gitignore  Cargo.toml  README.md  REFACTOR_PLAN.md
.config/: config.json5
.github/: dependabot.yml
.github/workflows/: cd.yml
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  error.rs  git.rs  main.rs  mode.rs  tui.rs  utils.rs
src/components/: branch_list.rs  error_component.rs  home.rs  mod.rs  stash_list.rs
src/components/branch_list/: branch_input.rs  branch_item.rs  instruction_footer.rs  list.rs  mod.rs
src/components/common/: text_input.rs
src/components/shared/: generic_input.rs  generic_list.rs  instruction_footer.rs  mod.rs
src/components/stash_list/: instruction_footer.rs  list.rs  mod.rs  stash_item.rs
src/components/traits/: input_handler.rs  list_action_handler.rs  list_data_source.rs  list_item_wrapper.rs  managed_item.rs  mod.rs
src/components/ui/: mod.rs
src/components/ui/common/: error_component.rs  mod.rs
src/components/views/: mod.rs
src/components/views/branch_list/: branch_action_handler.rs  branch_data_source.rs  branch_input.rs  branch_input_handler.rs  branch_item.rs  instruction_footer.rs  list.rs  mod.rs
src/components/views/error_view/: view.rs
src/components/views/stash_list/: instruction_footer.rs  list.rs  mod.rs  stash_action_handler.rs  stash_data_source.rs  stash_input.rs  stash_input_handler.rs  stash_item.rs
src/git/: git2_repo.rs  git_cli_repo.rs  git_repo.rs  mock_git_repo.rs  mod.rs  repo.rs  types.rs
