[package]
name = "git-branch-manager"
version = "0.1.0"
edition = "2021"
description = "Git branch and stash manager"
repository = "https://github.com/ryan-rushton/git-branch-manager"
authors = ["Ryan <ryan.rushton79@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.5.4", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.30"
git2 = "0.18.3"
human-panic = "1.2.3"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.21"
pretty_assertions = "1.4.0"
ratatui = { version = "0.26.1", features = ["serde", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
thiserror = "1.0.58"
tui-textarea = "0.4.0"

[build-dependencies]
vergen = { version = "8.3.1", features = ["build", "git", "gitoxide", "cargo"] }
