[package]
name = "git-branch-manager"
version = "0.1.0"
edition = "2024"
description = "Git branch and stash manager"
repository = "https://github.com/ryan-rushton/git-branch-manager"
authors = ["Ryan <ryan.rushton79@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
better-panic = "0.3.0"
clap = { version = "4.5.32", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.15.11"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
human-panic = "2.0.2"
lazy_static = "1.5.0"
libc = "0.2.171"
log = "0.4.26"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
tui-textarea = "0.7.0"

[build-dependencies]
vergen = { version = "=8.3.2", features = ["build", "git", "gitcl", "cargo"] }
